* OTH#0000 Add access rights on payment creation from invoices button
* FEA#8233 Allow to create payments right from the invoice
* BUG#9627 Fix account payment creation batch: It does not select lines with a draft move anymore
* BUG#9536 Fix to avoid null payment creation
* BUG#7873 Refactor and improve payment amount calculation
* BUG#9347 Properly use job_size in payment succeed batch
* BUG#9413 Properly calculate payment kind from move lines when creating payments
* BUG#9329 Add authorization to party.party.payment_direct_debit
* FEA#9189 Allow to mix positive and negative move lines when creating payments
* BUG#8837 Fix crash when reading the related invoice on payment if the invoice field is empty on the move line.
* BUG#8417 Set the payment date to none only when receiving SEPA payment fail

Version 2.0 - 2018-04-13
* BUG#8351 Wrong payment amount computation during payment creation when an approved payment is already created
* OTH#0000 Fix the error message when creating a payment from lines which do not have the same payment journals configuration
* BUG#7900 Allow non 0 job size for payment processing batch
* BUG#7538 Add missing authorizations on buttons for account payments

Version 1.14 - 2017-11-09
* BUG#6692 The planned payment date for payments should be updated to the actual payment date
* BUG#7337 Handle processing payments for the computation of the total outstanding amount on parties
* BUG#7338 Add index on payment's group
* BUG#7275 Do not create payments for blocked lines
* BUG#6067 Remove tryton action "Pay" from lines to pay list view
* BUG#7019 Check the creation of a payment group before notifying the event
* BUG#6983 Keep "Pending Payment" information is the invoice is cancelled
* BUG#6939 Add the process method on payment groups as invisible field
* BUG#6707 Fix payment reject number calculation when mixing payments from different journals
* FEA#6739 Show from a payment all related payments which are on the same line